v2 student repo project

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./helpers_do-not-alter/style.css">
     <title>Guess That Number!</title>
 </head>
-<body style="padding: 3em;">
-
-    <!-- DO NOT ALTER ANY OF THIS CODE -->
-
-    <h1 style="color: red;">Guess the Computers Number:</h1>
-    <h3>Choose between 1 and 100</h3>
+<body>
+    <!-- DO NOT ALTER ANY OF CODE -->
+    <h1>Guess the Computers Number:</h1>
+    <h2>Choose between 1 and 100</h2>
     <form>
         <input type="number" placeholder="1-100">
         <button id="guess-btn" type="submit">Guess!</button>
@@ -19,12 +18,23 @@
     
     <h2>Response</h2>
     <hr>
-    <h3 id="status-response"><i style="color: lightgray">Computers Response Here</i></h3>
+    <h3 id="status-response"><i>Computers Response Here</i></h3>
+
+    <hr>
+    <!-- Computer Guesses your Number -->
+
+    <h1>Think of a Number between 1-100</h1>
+    <h2>The computer will guess your number</h2>
+    <button id="comp-guess-start-btn">Start</button>
+    <h3 id="comp-guesses-response">Is it...</h3>
+    <div id="lower-higher-btns">
+        <button>Lower</button>
+        <button>That's it!</button>
+        <button>Higher</button>
+    </div>
 
     <!-- JavaScript -->
-    <script src="./assets/main.js"></script>
+    <script src="./helpers_do-not-alter/main.js"></script>
     <script src="./script.js"></script>
-
-    <!-- DO NOT ALTER ANY OF THIS CODE -->
 </body>
 </html>
